# PyTorchUltimateUdemy

./: convert_requirements.py  pyproject.toml
CourseLearning/: sgImageAiAnalytics.md
