[project]
name = "PyTorch-Ultimate-Materials-Udemy"
version = "0.1.0"
description = "This is the dependency manager for the pytorch ultimate materials udemy project"
authors = [
    {name = "Zane Yee",email = "zaneyeesun@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "requests (>=2.32.3,<3.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "graphviz (>=0.20.3,<0.21.0)",
    "torchmetrics (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
